re PR middle-end/21460 (sjlj_emit_function_enter adds rtl to wrong block)

PR middle-end/21460
	* except.c (sjlj_emit_function_enter): Find the function begin
	note even when it's not in first basic block.

From-SVN: r103933